QI: Rebuilt "Incentives" blocks in tw.  New image.

--- a/quality-install.htm
+++ b/quality-install.htm
@@ -46,7 +46,7 @@
 		}
 
 		.hidden {
-			/* display: block !important; */
+			display: block !important;
 		}
 	</style>
 </head>
@@ -305,65 +305,93 @@
 				</div>
 			</section>
 
+			<section class="hidden" data-hvac>
+				<div class="grid sm:grid-cols-2">
+					<!-- Image Column -->
+					<div
+						class="relative flex items-center justify-center text-4xl text-white bg-gray-600 aspect-video sm:aspect-auto sm:order-last">
+						<img alt="Photo of equipment outdoors" class="absolute inset-0 w-full h-full object-cover"
+							src="https://tristate.coop/sites/default/files/images/quality-install/GettyImages-1407175869_HeatPump_web.jpg" />
+						<div class="relative font-serif font-bold text-left w-full p-12">
+							Incentives for heat pumps
+						</div>
+					</div>
 
-
-			<section class="ts-grid-column ts-grid-row ts-grid-row-reverse hidden" data-hvac="">
-				<div class="grid p-12 place-content-center px-12 text-4xl text-white ts-grid-column ts-grid-column-img"
-					style="background:#757575"><img alt="Photo of equipment outdoors" class="video-thumb"
-						src="https://tristate.coop/sites/default/files/images/quality-install/GettyImages-1407175869_HeatPump_web.jpg" />
-					<div class="relative font-serif font-bold">Incentives for heat pump water heaters</div>
-				</div>
-
-				<div class="ts-background-green ts-grid-column ts-grid-column-copy">
-					<div class="ts-grid-column-copy space-y-4">
-						<h2 class="headline-light ts-heading-2" style="margin-bottom:0">Submit each install for cash
-							back
-						</h2>
-						<p>Approved QI contractors must
-							download and complete the form below to receive incentives. You will need to submit at
-							least one form per install location. Email forms to participating utility members or the
-							Tri-State rebate portal. You will receive $350 or $450 upon approval. Looking to save your
-							customers money on their equipment? Tri-State and our members offer rebates that can be
-							combined
-							with state and federal rebates.</p>
-
-						<p><a class="button button-transparent"
-								href="https://tristate.coop/sites/default/files/PDF/electrify-and-save/E%26S%20Quality%20Install%20Rebate%20Form.pdf"
-								target="_blank">Install
-								Incentive
-								Form</a></p>
+					<!-- Content Column -->
+					<div class="bg-[#9CB03B] text-white p-8 sm:p-12 md:py-16">
+						<div class="space-y-4">
+							<h2 class="text-3xl font-light">Submit each install for cash back</h2>
+							<p>
+								Approved QI contractors must download and complete the form below to receive incentives.
+								You
+								will need to submit at least one form per install location. Email forms to participating
+								utility
+								members or the Tri-State rebate portal. You will receive $350 or $450 upon approval.
+								Looking
+								to save
+								your
+								customers money on their equipment? Tri-State and our members offer rebates that can be
+								combined with
+								state and federal rebates.
+							</p>
+							<p>
+								<a class="inline-block border-2 border-solid text-white border-white py-2 px-6 rounded-full no-underline hover:bg-white hover:text-[#9CB03B] transition"
+									href="https://tristate.coop/sites/default/files/PDF/electrify-and-save/E%26S%20Quality%20Install%20Rebate%20Form.pdf"
+									target="_blank">
+									Install Incentive Form
+								</a>
+							</p>
+						</div>
 					</div>
 				</div>
 			</section>
-			<section class="ts-grid-column ts-grid-row ts-grid-row-reverse hidden" data-plumber="">
-				<div class="grid p-12 place-content-center px-12 text-4xl text-white ts-grid-column ts-grid-column-img"
-					style="background:#757575"><img alt="Photo of equipment outdoors" class="video-thumb"
-						src="https://tristate.coop/sites/default/files/images/quality-install/GettyImages-1407175869_HeatPump_web.jpg" />
-					<div class="relative font-serif font-bold">Incentives for heat pump water heaters</div>
-				</div>
 
-				<div class="ts-background-green ts-grid-column ts-grid-column-copy">
-					<div class="ts-grid-column-copy space-y-4">
-						<h2 class="headline-light ts-heading-2" style="margin-bottom:0">Submit each install for cash
-							back
-						</h2>
+			<section class="hidden" data-plumber>
+				<div class="grid sm:grid-cols-2">
 
-						<p>Approved QI contractors must download and complete the form below to receive incentives. You
-							will
-							need to submit at least one form per install location. Email forms to participating utility
-							members or the Tri-State rebate portal. You will receive $200 per Heat Pump Water Heater
-							installation. Looking to save your customers money on their equipment? Tri-State and our
-							members
-							offer rebates that can be combined with state and federal rebates.</p>
+					<!-- Image Column -->
+					<div
+						class="relative flex items-center justify-center text-4xl text-white bg-gray-600 aspect-video sm:aspect-auto sm:order-last">
+						<img alt="Photo of equipment outdoors" class="absolute w-full h-full object-cover object-top"
+							src="https://tristate.coop/sites/default/files/images/quality-install/heat_pump_water_heater_appliance_640x960.jpg" />
+						<div class="relative font-serif font-bold text-left w-full p-12">
+							Incentives for heat pump water heaters
+						</div>
+					</div>
 
-						<p><a class="button button-transparent"
-								href="https://tristate.coop/sites/default/files/PDF/electrify-and-save/E%26S%20Quality%20Install%20Rebate%20Form.pdf"
-								target="_blank">Install
-								Incentive
-								Form</a></p>
+
+
+
+					<!-- Content Column -->
+					<div class="bg-[#9CB03B] text-white p-8 sm:p-12 md:py-16">
+						<div class="space-y-4">
+							<h2 class="text-3xl font-light">Submit each install for cash back</h2>
+							<p>Approved QI contractors must download and complete the form below to receive incentives.
+								You
+								will
+								need to submit at least one form per install location. Email forms to participating
+								utility
+								members or the Tri-State rebate portal. You will receive $200 per Heat Pump Water Heater
+								installation. Looking to save your customers money on their equipment? Tri-State and our
+								members
+								offer rebates that can be combined with state and federal rebates.</p>
+							<p>
+								<a class="inline-block border-2 border-solid text-white border-white py-2 px-6 rounded-full no-underline hover:bg-white hover:text-[#9CB03B] transition"
+									href="https://tristate.coop/sites/default/files/PDF/electrify-and-save/E%26S%20Quality%20Install%20Rebate%20Form.pdf"
+									target="_blank">
+									Install Incentive Form
+								</a>
+							</p>
+						</div>
 					</div>
 				</div>
 			</section>
+
+
+
+
+
+
 		</div><!-- .block-region-content -->
 	</main>
 
