QI: Fix spacing issue.  Buttons focus color fixed.

--- a/quality-install.htm
+++ b/quality-install.htm
@@ -82,20 +82,20 @@
 						<h1 class="text-base font-bold"
 							style="font-family: 'Sarabun','Helvetica Neue',Helvetica,Arial,sans-serif">
 							HVAC and Heat Pump Technicians</h1>
-						<a class="text-base text-center bg-green text-white px-5 font-normal mx-auto rounded-full no-underline inline-block text-inherit leading-10 focus:text-white"
+						<a class="text-base text-center bg-green text-white px-5 font-normal mx-auto rounded-full no-underline inline-block text-inherit leading-10 focus:!text-white"
 							data-qi-selector="hvac" href="#">Begin Here</a>
 					</div>
 					<div>
 						<h1 class="text-base font-bold"
 							style="font-family: 'Sarabun','Helvetica Neue',Helvetica,Arial,sans-serif">
 							Plumbers and Heat Pump Water Heater Technicians</h1>
-						<a class="text-base text-center bg-green text-white px-5 font-normal mx-auto rounded-full no-underline inline-block text-inherit leading-10 focus:text-white"
+						<a class="text-base text-center bg-green text-white px-5 font-normal mx-auto rounded-full no-underline inline-block text-inherit leading-10 focus:!text-white"
 							data-qi-selector="plumber" href="#">Begin Here</a>
 					</div>
 				</div>
 			</section>
 
-			<section class="px-8 py-16 text-center text-balance sm:grid sm:place-content-center hidden" data-hvac>
+			<section class="px-8 pb-16 text-center text-balance sm:grid sm:place-content-center hidden" data-hvac>
 				<div class="mx-auto max-w-2xl space-y-4">
 					<h2 class="headline-light ts-heading-2">
 						Contractors can receive up to $450 per HVAC installation as a Quality Install (QI) trade ally
@@ -111,7 +111,7 @@
 				</div>
 			</section>
 
-			<section class="px-8 py-16 text-center text-balance sm:grid sm:place-content-center hidden" data-plumber>
+			<section class="px-8 pb-16 text-center text-balance sm:grid sm:place-content-center hidden" data-plumber>
 				<div class="mx-auto max-w-2xl space-y-4">
 					<h2 class="headline-light ts-heading-2">
 						Contractors can receive up to $200 per Heat Pump Water Heater installation as a Quality Install
