QI: Aspect ratio fixes
The column images were using both height and aspect, which blew out the width.  The videos were using square aspect on mobile, which didn't look good with thumbnails that contain text.

--- a/quality-install.htm
+++ b/quality-install.htm
@@ -235,7 +235,8 @@
 				</div>
 			</section>
 			<section class="hidden" data-hvac><!-- Slider main container -->
-				<div class="swiper ts-slider ts-slider-esg es-slider"><!-- Additional required wrapper -->
+				<div class="swiper ts-slider ts-slider-esg es-slider h-auto aspect-video">
+					<!-- Additional required wrapper -->
 					<div class="swiper-wrapper"><!-- Slides -->
 						<div class="swiper-slide ts-slide">
 							<div class="absolute grid size-full place-content-center"><img alt="Module 1 QI Install"
@@ -245,7 +246,7 @@
 									data-featherlight-iframe-allowfullscreen="true"
 									data-featherlight-iframe-height="281" data-featherlight-iframe-width="500"
 									href="https://www.youtube.com/embed/nbNIiXqS7WU"> <img alt="Play button"
-										class="size-44"
+										class="size-20 md:size-44"
 										src="https://tristate.coop/sites/default/files/images/esg/play-video-thumbnail-cover.svg" />
 								</a>
 							</div>
@@ -259,7 +260,7 @@
 									data-featherlight-iframe-allowfullscreen="true"
 									data-featherlight-iframe-height="281" data-featherlight-iframe-width="500"
 									href="https://www.youtube.com/embed/22w-SPX7h1M"> <img alt="Play button"
-										class="size-44"
+										class="size-20 md:size-44"
 										src="https://tristate.coop/sites/default/files/images/esg/play-video-thumbnail-cover.svg" />
 								</a>
 							</div>
@@ -273,7 +274,7 @@
 									data-featherlight-iframe-allowfullscreen="true"
 									data-featherlight-iframe-height="281" data-featherlight-iframe-width="500"
 									href="https://www.youtube.com/embed/OAzRZNy1o5A"> <img alt="Play button"
-										class="size-44"
+										class="size-20 md:size-44"
 										src="https://tristate.coop/sites/default/files/images/esg/play-video-thumbnail-cover.svg" />
 								</a>
 							</div>
@@ -290,15 +291,15 @@
 					<!-- If we need scrollbar --><!-- <div class="swiper-scrollbar">&nbsp;</div> -->
 				</div>
 			</section>
-			<section class="h-96 hidden" data-plumber><!-- Slider main container -->
-				<div class="h-full flex justify-center">
-					<div class="relative aspect-video"><img alt="Heat Pump Water Heater Install Basics"
+			<section class="hidden" data-plumber>
+				<div class="h-full flex justify-center aspect-video ">
+					<div class="relative w-full"><img alt="Heat Pump Water Heater Install Basics"
 							class="absolute size-full object-cover"
 							src="https://tristate.coop/sites/default/files/images/quality-install/Training-Video-Cards_HPWH.jpg" />
 						<a class="absolute inset-0 z-10 grid place-content-center" data-featherlight="iframe"
 							data-featherlight-iframe-allowfullscreen="true" data-featherlight-iframe-height="281"
 							data-featherlight-iframe-width="500" href="https://www.youtube.com/embed/ozzOkWnOFIY"> <img
-								alt="Play button" class="size-44"
+								alt="Play button" class="size-20 md:size-44"
 								src="https://tristate.coop/sites/default/files/images/esg/play-video-thumbnail-cover.svg" />
 						</a>
 					</div>
@@ -309,7 +310,7 @@
 				<div class="grid sm:grid-cols-2">
 					<!-- Image Column -->
 					<div
-						class="relative flex items-center justify-center text-4xl text-white bg-gray-600 aspect-video sm:aspect-auto sm:order-last">
+						class="relative flex items-center justify-center text-4xl text-white bg-gray-600 aspect-[3/2] sm:aspect-auto sm:order-last">
 						<img alt="Photo of equipment outdoors" class="absolute inset-0 w-full h-full object-cover"
 							src="https://tristate.coop/sites/default/files/images/quality-install/GettyImages-1407175869_HeatPump_web.jpg" />
 						<div class="relative font-serif font-bold text-left w-full p-12">
@@ -351,7 +352,7 @@
 
 					<!-- Image Column -->
 					<div
-						class="relative flex items-center justify-center text-4xl text-white bg-gray-600 aspect-video sm:aspect-auto sm:order-last">
+						class="relative flex items-center justify-center text-4xl text-white bg-gray-600 aspect-[3/2] sm:aspect-auto sm:order-last">
 						<img alt="Photo of equipment outdoors" class="absolute w-full h-full object-cover object-top"
 							src="https://tristate.coop/sites/default/files/images/quality-install/heat_pump_water_heater_appliance_640x960.jpg" />
 						<div class="relative font-serif font-bold text-left w-full p-12">
