Podcast: New artwork

--- a/podcast-feed.htm
+++ b/podcast-feed.htm
@@ -56,14 +56,15 @@
 				Listen here or follow along on your preferred platform:
 			</p>
 			<div class="grid grid-flow-col gap-4 justify-center pt-10 w-max mx-auto">
+				<!-- auto-cols-fr -->
 				<a href="https://open.spotify.com/show/1NiQnORjcy5IIkFnGX6Po1" target="_blank"
-					class="flex items-center gap-2 text-lg bg-[#3B1A1B] text-white p-2 rounded no-underline uppercase hover:bg-[#6A3D35] w-full">
+					class="flex items-center gap-2 text-lg bg-[#3B1A1B] text-white py-2 px-4 rounded no-underline uppercase hover:bg-[#6A3D35] w-full">
 					<img src="https://tristate.coop/sites/default/files/images/podcast/spotify-brands-solid-white.svg"
 						alt="Spotify" class="size-8">
 					<span>Spotify</span>
 				</a>
 				<a href="#"
-					class="flex items-center gap-2 text-lg bg-[#3B1A1B] text-white p-2 rounded no-underline uppercase hover:bg-[#6A3D35] w-full">
+					class="flex items-center gap-2 text-lg bg-[#3B1A1B] text-white py-2 px-4 rounded no-underline uppercase hover:bg-[#6A3D35] w-full">
 					<img src="https://tristate.coop/sites/default/files/images/podcast/podcast-solid-white.svg"
 						alt="Podcast" class="size-8">
 					<span>Apple</span>
@@ -74,31 +75,17 @@
 	</section>
 	<section class="px-8 py-16 text-center sm:grid sm:place-items-center">
 		<div class="w-full max-w-3xl mx-auto grid gap-8 sm:grid-cols-2 md:grid-cols-3">
-			<a href="#" class="bg-[#3B1A1B] hover:bg-[#6A3D35] text-white border-2 border-[#6A3D35] 
-				flex flex-col items-center justify-center min-h-28 w-full h-full rounded transition p-4 no-underline">
-				<span class="text-xs font-bold uppercase tracking-wide font-serif">Ep 1:</span>
-				<span class="text-lg font-semibold">Duane Highley</span>
+			<a href="#" class="">
+				<img src="assets/images/podcast/WW Tri-State Website Episode Tile Getting to know Duane Highley.png">
 			</a>
-			<a href="#" class="bg-[#3B1A1B] hover:bg-[#6A3D35] text-white border-2 border-[#6A3D35] 
-				flex flex-col items-center justify-center min-h-28 w-full h-full rounded transition p-4 no-underline">
-				<span class="text-xs font-bold uppercase tracking-wide font-serif">Ep 2:</span>
-				<span class="text-lg font-semibold">Tim Rabin</span>
+			<a href="#" class="">
+				<img src="assets/images/podcast/WW Tri-State Website Episode Tile Getting to know Duane Highley.png">
 			</a>
-			<a href="#" class="bg-[#3B1A1B] hover:bg-[#6A3D35] text-white border-2 border-[#6A3D35] 
-				flex flex-col items-center justify-center min-h-28 w-full h-full rounded transition p-4 no-underline">
-				<span class="text-xs font-bold uppercase tracking-wide font-serif">Ep 3:</span>
-				<span class="text-lg font-semibold">Curtis Hartenstein</span>
+			<a href="#" class="">
+				<img src="assets/images/podcast/WW Tri-State Website Episode Tile Getting to know Duane Highley.png">
 			</a>
-			<a href="#" class="bg-[#3B1A1B] hover:bg-[#6A3D35] text-white border-2 border-[#6A3D35] 
-				flex flex-col items-center justify-center min-h-28 w-full h-full rounded transition p-4 no-underline">
-				<span class="text-xs font-bold uppercase tracking-wide font-serif">Ep 4:</span>
-				<span class="text-lg font-semibold">Elda de la Peña</span>
-			</a>
-			<a href="#" class="bg-[#3B1A1B] hover:bg-[#6A3D35] text-white border-2 border-[#6A3D35] 
-				flex flex-col items-center justify-center min-h-28 w-full h-full rounded transition p-4 no-underline">
-				<span class="text-xs font-bold uppercase tracking-wide font-serif">Ep 5:</span>
-				<span class="text-lg font-semibold">Bob Frankmore</span>
-			</a>
+
+
 		</div>
 	</section>
 
