--- a/podcast-episode.htm
+++ b/podcast-episode.htm
@@ -34,15 +34,14 @@
 <body id="main" class="block-region-content">
 	<!-- Hero -->
 	<section class="relative overflow-hidden grid place-content-center">
-		<img src="https://tristate.coop/sites/default/files/images/podcast/tooled-leather.jpg" alt="" srcset=""
-			class="absolute inset-0 object-cover">
-		<div class="relative z-10 py-20"><img
+		<img src="assets/images/podcast/1 Duane Highley Hero Image.png" alt="" srcset="" class="w-full">
+		<!-- <div class="relative z-10 py-20"><img
 				src="https://tristate.coop/sites/default/files/images/podcast/western-watts-logo.svg"
-				alt="Western Watts Logo" class="h-52"></div>
+				alt="Western Watts Logo" class="h-52"></div> -->
 	</section>
 	<section class="px-8 py-16 grid sm:grid-cols-2 gap-8">
 		<div class="">
-			<h2 class="font-serif font-light">Ep 1: Duane Highley </h2>
+			<h2 class="font-serif font-light">Ep 1: Getting to know Duane Highley </h2>
 			<p>WW sits down with ipsum dolor, sit amet consectetur adipisicing elit. Molestiae impedit quis qui numquam
 				dolorem deleniti accusantium, incidunt rem soluta delectus, earum minus officiis reprehenderit molestias
 				illum est. Officiis, ea ipsum!</p>
