Podcast: Add YT links and icons.  Ep1 updates.

--- a/podcast-episode.htm
+++ b/podcast-episode.htm
@@ -34,35 +34,53 @@
 <body id="main" class="block-region-content">
 	<!-- Hero -->
 	<section class="relative overflow-hidden grid place-content-center">
-		<img src="assets/images/podcast/1 Duane Highley Hero Image.png" alt="" srcset="" class="w-full">
-		<!-- <div class="relative z-10 py-20"><img
-				src="https://tristate.coop/sites/default/files/images/podcast/western-watts-logo.svg"
-				alt="Western Watts Logo" class="h-52"></div> -->
+		<img src="https://tristate.coop/sites/default/files/2025-02/Copy%20of%20WW%20Tri-State%20Website%20Episode%20Page%20Hero.png"
+			alt="" srcset="" class="w-full">
 	</section>
 	<section class="px-8 py-16 grid sm:grid-cols-2 gap-8">
-		<div class="">
-			<h2 class="font-serif font-light">Ep 1: Getting to know Duane Highley </h2>
-			<p>WW sits down with ipsum dolor, sit amet consectetur adipisicing elit. Molestiae impedit quis qui numquam
-				dolorem deleniti accusantium, incidunt rem soluta delectus, earum minus officiis reprehenderit molestias
-				illum est. Officiis, ea ipsum!</p>
+		<div>
+			<h2 class="font-serif font-light mb-0">Episode 1: Getting to know Duane Highley </h2>
+			<p class="text-sm text-slate-500">February 18, 2025</p>
+			<p>Welcome to the first episode of Western Watts, Tri-State's new energy podcast! Who better to kick things
+				off than our CEO Duane Highley?
+			<p>
+				Duane joined Tri-State in 2019 and has almost four decades of experience
+				with cooperatives, but this CEO is so much more than his resume. Learn about the french-horn-playing,
+				motorcycle-riding, podcast-binging person behind the title and the beautiful, winding path that brought
+				Duane and his family to Colorado.
+			</p>
+			<p>
+
+				This is part one of a three-part series with Duane where you’ll get to know the CEO, his plans for the
+				cooperative, and maybe even some Godzilla talk.
+			</p>
+			<p>
+				Like, subscribe, and share with a fellow energy user!</p>
+			</p>
 			<div class="flex gap-4">
-				<a href="https://open.spotify.com/episode/33jSlenTsxWlG5pjDvfMSO" target="_blank"
-					class="flex items-center gap-2 bg-[#3B1A1B] text-white px-2 py-2 rounded no-underline uppercase hover:bg-[#6A3D35]">
+				<a href="https://open.spotify.com/episode/0mTCAYMW30ghyT0mnoQaGJ" target="_blank"
+					class="flex items-center gap-2 bg-[#3B1A1B] text-white px-4 py-2 rounded no-underline uppercase hover:bg-[#6A3D35]">
 					<img src="https://tristate.coop/sites/default/files/images/podcast/spotify-brands-solid-white.svg"
-						alt="Spotify" class="w-5 h-5">
+						alt="Spotify" class="size-5">
 					<span>Spotify</span>
 				</a>
-				<a href="#"
-					class="flex items-center gap-2 bg-[#3B1A1B] text-white px-2 py-2 rounded no-underline uppercase hover:bg-[#6A3D35]">
+				<a href="https://www.youtube.com/watch?v=ghQgj6VlfJc"
+					class="flex items-center gap-2 bg-[#3B1A1B] text-white px-4 py-2 rounded no-underline uppercase hover:bg-[#6A3D35]">
+					<img src="https://tristate.coop/sites/default/files/images/podcast/youtube-brands-solid-white.svg"
+						alt="Podcast" class="size-5">
+					<span>YouTube</span>
+				</a>
+				<a href="https://podcasts.apple.com/us/podcast/getting-to-know-duane-highley/id1794852394?i=1000692056949"
+					class="flex items-center gap-2 bg-[#3B1A1B] text-white px-4 py-2 rounded no-underline uppercase hover:bg-[#6A3D35]">
 					<img src="https://tristate.coop/sites/default/files/images/podcast/podcast-solid-white.svg"
-						alt="Podcast" class="w-5 h-5">
+						alt="Podcast" class="size-5">
 					<span>Apple</span>
 				</a>
 			</div>
 		</div>
-		<div class="">
+		<div>
 			<iframe width="100%" height="180" frameborder="no" scrolling="no" seamless
-				src="https://share.transistor.fm/e/6c8f8fb3"></iframe>
+				src="https://share.transistor.fm/e/bfb9dd18"></iframe>
 		</div>
 	</section>
 
