--- a/podcast-feed.htm
+++ b/podcast-feed.htm
@@ -55,18 +55,25 @@
 			<p class="text-balance">
 				Listen here or follow along on your preferred platform:
 			</p>
-			<div class="grid grid-flow-col gap-4 justify-center pt-10 w-max mx-auto">
+			<div class="grid gap-4 justify-center pt-10 w-full max-w-xs sm:max-w-none sm:grid-flow-col mx-auto">
+
 				<!-- auto-cols-fr -->
 				<a href="https://open.spotify.com/show/1NiQnORjcy5IIkFnGX6Po1" target="_blank"
 					class="flex items-center gap-2 text-lg bg-[#3B1A1B] text-white py-2 px-4 rounded no-underline uppercase hover:bg-[#6A3D35] w-full">
 					<img src="https://tristate.coop/sites/default/files/images/podcast/spotify-brands-solid-white.svg"
-						alt="Spotify" class="size-8">
+						alt="Spotify Logo" class="size-8">
 					<span>Spotify</span>
 				</a>
-				<a href="#"
+				<a href="https://www.youtube.com/playlist?list=PLuo-t-d_Nu0wBueACUqtL4L_fPTYKO6-y"
+					class="flex items-center gap-2 text-lg bg-[#3B1A1B] text-white py-2 px-4 rounded no-underline uppercase hover:bg-[#6A3D35] w-full">
+					<img src="https://tristate.coop/sites/default/files/images/podcast/youtube-brands-solid-white.svg"
+						alt="YouTube Logo" class="size-8">
+					<span>YouTube</span>
+				</a>
+				<a href="https://podcasts.apple.com/us/podcast/western-watts/id1794852394"
 					class="flex items-center gap-2 text-lg bg-[#3B1A1B] text-white py-2 px-4 rounded no-underline uppercase hover:bg-[#6A3D35] w-full">
 					<img src="https://tristate.coop/sites/default/files/images/podcast/podcast-solid-white.svg"
-						alt="Podcast" class="size-8">
+						alt="Apple Podcast Logo" class="size-8">
 					<span>Apple</span>
 				</a>
 			</div>
@@ -75,16 +82,18 @@
 	</section>
 	<section class="px-8 py-16 text-center sm:grid sm:place-items-center">
 		<div class="w-full max-w-3xl mx-auto grid gap-8 sm:grid-cols-2 md:grid-cols-3">
-			<a href="#" class="">
-				<img src="assets/images/podcast/WW Tri-State Website Episode Tile Getting to know Duane Highley.png">
+			<a href="https://tristate.coop/podcast-western-watts-about-duane-highley" class="">
+				<img src="https://tristate.coop/sites/default/files/images/podcast/episode-art/ww-tri-state-website-episode-tile-getting-to-know-duane-highley.png"
+					alt="Episode 1: Getting to know Duane Highley">
 			</a>
-			<a href="#" class="">
-				<img src="assets/images/podcast/WW Tri-State Website Episode Tile Getting to know Duane Highley.png">
+			<a href="https://tristate.coop/podcast-western-watts-about-duane-highley" class="">
+				<img src="https://tristate.coop/sites/default/files/images/podcast/episode-art/ww-tri-state-website-episode-tile-getting-to-know-duane-highley.png"
+					alt="Episode 1: Getting to know Duane Highley">
 			</a>
-			<a href="#" class="">
-				<img src="assets/images/podcast/WW Tri-State Website Episode Tile Getting to know Duane Highley.png">
+			<a href="https://tristate.coop/podcast-western-watts-about-duane-highley" class="">
+				<img src="https://tristate.coop/sites/default/files/images/podcast/episode-art/ww-tri-state-website-episode-tile-getting-to-know-duane-highley.png"
+					alt="Episode 1: Getting to know Duane Highley">
 			</a>
-
 
 		</div>
 	</section>
