OBR: New video and updated slider layout.

--- a/obr.htm
+++ b/obr.htm
@@ -202,13 +202,13 @@
 	</section>
 
 	<!-- Video Carousel -->
-	<section class="min-h-96">
+	<section>
 		<div class="es-slider">
 
 			<!-- Slider main container -->
-			<div class="swiper ts-slider ts-slider-esg">
+			<div class="swiper ts-slider ts-slider-esg" style="height: auto">
 				<!-- Additional required wrapper -->
-				<div class="swiper-wrapper"><!-- Slides -->
+				<div class="swiper-wrapper aspect-video md:h-96 md:aspect-auto"><!-- Slides -->
 					<div class="swiper-slide ts-slide ts-slide-video">
 						<a class="video-thumbnail" data-featherlight="iframe"
 							data-featherlight-iframe-allowfullscreen="true" data-featherlight-iframe-height="281"
@@ -216,7 +216,7 @@
 							target="_blank" rel="noopener">
 
 							<img src="https://tristate.coop/sites/default/files/images/electrify-and-save/2025/CoCo_opt3.jpg"
-								alt=""></a>
+								alt="Colorado & Company Logo"></a>
 					</div>
 					<div class="swiper-slide ts-slide ts-slide-video">
 						<a class="video-thumbnail" data-featherlight="iframe"
@@ -225,16 +225,16 @@
 							target="_blank" rel="noopener">
 
 							<img src="https://tristate.coop/sites/default/files/images/electrify-and-save/2025/CoCo_opt1.jpg"
-								alt=""></a>
+								alt="Scene from on-set interview on Colorado & Companye"></a>
 					</div>
 					<div class="swiper-slide ts-slide ts-slide-video">
 						<a class="video-thumbnail" data-featherlight="iframe"
 							data-featherlight-iframe-allowfullscreen="true" data-featherlight-iframe-height="281"
-							data-featherlight-iframe-width="500" href="https://www.youtube.com/embed/nQvaOUuuKoU"
+							data-featherlight-iframe-width="500" href="https://www.youtube.com/embed/OEcihkqEJ14"
 							target="_blank" rel="noopener">
 
-							<img src="https://tristate.coop/sites/default/files/images/electrify-and-save/video-thumbnail.png"
-								alt=""></a>
+							<img src="https://tristate.coop/sites/default/files/images/electrify-and-save/TS_OBR_Generic_web.jpg"
+								alt="No money down, no credit check, low-interest rate"></a>
 					</div>
 
 				</div>
