Podcast: New copy and hero image for ep 1.

--- a/podcast-episode.htm
+++ b/podcast-episode.htm
@@ -34,7 +34,7 @@
 <body id="main" class="block-region-content">
 	<!-- Hero -->
 	<section class="relative overflow-hidden grid place-content-center">
-		<img src="https://tristate.coop/sites/default/files/2025-02/Copy%20of%20WW%20Tri-State%20Website%20Episode%20Page%20Hero.png"
+		<img src="https://tristate.coop/sites/default/files/images/podcast/episode-art/1%20Duane%20Highley%20Hero%20Image.png"
 			alt="" srcset="" class="w-full">
 	</section>
 	<section class="px-8 py-16 grid sm:grid-cols-2 gap-8">
@@ -42,21 +42,21 @@
 			<h2 class="font-serif font-light mb-0">Episode 1: Getting to know Duane Highley </h2>
 			<p class="text-sm text-slate-500">February 18, 2025</p>
 			<p>Welcome to the first episode of Western Watts, Tri-State's new energy podcast! Who better to kick things
-				off than our CEO Duane Highley?
-			<p>
-				Duane joined Tri-State in 2019 and has almost four decades of experience
-				with cooperatives, but this CEO is so much more than his resume. Learn about the french-horn-playing,
-				motorcycle-riding, podcast-binging person behind the title and the beautiful, winding path that brought
-				Duane and his family to Colorado.
-			</p>
-			<p>
+				off than our
+				CEO Duane Highley?</p>
 
-				This is part one of a three-part series with Duane where you’ll get to know the CEO, his plans for the
-				cooperative, and maybe even some Godzilla talk.
-			</p>
-			<p>
-				Like, subscribe, and share with a fellow energy user!</p>
-			</p>
+			<p>Duane joined Tri-State in 2019 and has almost four decades of experience with cooperatives, but this CEO
+				is so much
+				more than his resume. Learn about the french-horn-playing, motorcycle-riding, podcast-binging person
+				behind the
+				title and the beautiful, winding path that brought Duane and his family to Colorado.</p>
+
+			<p>This is part one of a three-part series with Duane where you’ll get to know the CEO, his plans for the
+				cooperative,
+				and maybe even some Godzilla talk.</p>
+
+			<p>Like, subscribe, and share with a fellow energy user!</p>
+
 			<div class="flex gap-4">
 				<a href="https://open.spotify.com/episode/0mTCAYMW30ghyT0mnoQaGJ" target="_blank"
 					class="flex items-center gap-2 bg-[#3B1A1B] text-white px-4 py-2 rounded no-underline uppercase hover:bg-[#6A3D35]">
