--- a/obr.htm
+++ b/obr.htm
@@ -193,7 +193,7 @@
 					unless member agress to enroll in autopay</li>
 			</ul>
 			<p>
-				<a href="https://tristate.coop/sites/default/files/PDF/electrify-and-save/E%26S%20OBR%20FAQ%20-%20NO%20ASSESSMENT_generic.pdf"
+				<a href="https://tristate.coop/sites/default/files/PDF/electrify-and-save/E%26S%20OBR%20FAQ.pdf"
 					target="_blank"
 					class="block items-center gap-2 border border-solid rounded-full px-4 py-2 font-normal no-underline transition-transform text-black text-center md:inline-flex">
 					Learn More
