Podcast: Content updates.  New landing page tiles.

--- a/podcast-episode-1.htm
+++ b/podcast-episode-1.htm
@@ -47,7 +47,7 @@
 
 			<p>Duane joined Tri-State in 2019 and has almost four decades of experience with cooperatives, but this CEO
 				is so much
-				more than his resume. Learn about the french-horn-playing, motorcycle-riding, podcast-binging person
+				more than his resume. Learn about the French-horn-playing, motorcycle-riding, podcast-binging person
 				behind the
 				title and the beautiful, winding path that brought Duane and his family to Colorado.</p>
 
