--- a/podcast-episode-5.htm
+++ b/podcast-episode-5.htm
@@ -39,7 +39,7 @@
 	</section>
 	<section class="px-8 py-16 grid sm:grid-cols-2 gap-8">
 		<div>
-			<h2 class="font-serif font-light mb-0">Episode 5: Future of Tri-State
+			<h2 class="font-serif font-light mb-0">Episode 5: Future of Tri-State with Duane Highley
 			</h2>
 			<p class="text-sm text-slate-500">February 18, 2025</p>
 			<p>If you could do one thing today to improve the lives of your grandchildren, or even great great
@@ -50,16 +50,15 @@
 
 			<p>In the final installment of his three-part interview, Duane discusses how the projects and decisions
 				they’re making
-				today will benefit cooperative members into the 2060s, especially with the life-changing $2.5 billion in
-				low-cost
-				financing and grants that was awarded to Tri-State in late 2024. He also lays out the work that goes
-				into keeping
-				prices low, even when the industry is doubling or tripling their rates.</p>
+				today will benefit cooperative members into the 2060s. He also lays out the work that goes into keeping
+				prices low,
+				even when the industry is doubling or tripling their rates.</p>
 
 			<p>It’s the cooperative difference in action, from an expert that’s been doing it for nearly four decades.
 			</p>
 
 			<p>Like, subscribe and share with a fellow energy user!</p>
+
 
 
 
