--- a/podcast-feed.htm
+++ b/podcast-feed.htm
@@ -46,11 +46,15 @@
 				Western Watts Energy Podcast
 			</h2>
 			<p class="text-balance">
-				Join us as we discover how Tri-State and our members are rising to the
-				challenge of powering the West. We'll be diving into the heart of energy
-				issues, from reliability to renewables, and sharing firsthand insights relevant
-				to rural, agricultural and mountain communities across Colorado, Nebraska,
-				New Mexico, and Wyoming.
+				Discover how Tri-State and our members are embracing the opportunity to power the West in our new
+				podcast, Western
+				Watts!
+			</p>
+			<p class="text-balance">
+				We'll dive into the heart of energy issues, from reliability to wildfire mitigation, and share firsthand
+				insights
+				relevant to rural, agricultural and mountain communities across Colorado, Nebraska, New Mexico and
+				Wyoming.
 			</p>
 			<p class="text-balance">
 				Listen here or follow along on your preferred platform:
@@ -86,13 +90,22 @@
 				<img src="https://tristate.coop/sites/default/files/images/podcast/episode-art/ww-tri-state-website-episode-tile-getting-to-know-duane-highley.png"
 					alt="Episode 1: Getting to know Duane Highley">
 			</a>
-			<a href="https://tristate.coop/podcast-western-watts-about-duane-highley" class="">
-				<img src="https://tristate.coop/sites/default/files/images/podcast/episode-art/ww-tri-state-website-episode-tile-getting-to-know-duane-highley.png"
-					alt="Episode 1: Getting to know Duane Highley">
+			<a href="https://tristate.coop/podcast-western-watts-cooperative-roots-tim-rabon" class="">
+				<img src="https://tristate.coop/sites/default/files/images/podcast/episode-art/ww-tri-state-website-episode-tile-cooperative-roots-tim-rabon.png"
+					alt="Episode 2: Cooperative Roots with Tim Rabon">
 			</a>
-			<a href="https://tristate.coop/podcast-western-watts-about-duane-highley" class="">
-				<img src="https://tristate.coop/sites/default/files/images/podcast/episode-art/ww-tri-state-website-episode-tile-getting-to-know-duane-highley.png"
-					alt="Episode 1: Getting to know Duane Highley">
+			<a href="https://tristate.coop/podcast-western-watts-wildfire-mitigation-curtis-hartenstine" class="">
+				<img src="https://tristate.coop/sites/default/files/images/podcast/episode-art/western-watts-episode-03-why-behind-wildfire-mitigation-curtis-hartenstine.png"
+					alt="Episode 3: The Why Behind Wildfire Mitigation with Curtis Hartenstine">
+			</a>
+			<a href="https://tristate.coop/podcast-western-watts-godzilla-meteors-and-reliability-duane-highley"
+				class="">
+				<img src="https://tristate.coop/sites/default/files/images/podcast/episode-art/western-watts-episode-04-godzilla-meteors-reliability-duane-highley.png"
+					alt="Episode 4: Godzilla, Meteors and Reliability with Duane Highley">
+			</a>
+			<a href="https://tristate.coop/podcast-western-watts-the-future-of-tri-state-duane-highley" class="">
+				<img src="https://tristate.coop/sites/default/files/images/podcast/episode-art/western-watts-episode-05-future-of-tri-state-duane-highley.png"
+					alt="Episode 5: Future of Tri-State">
 			</a>
 
 		</div>
