--- a/podcast-episode-1.htm
+++ b/podcast-episode-1.htm
@@ -81,6 +81,14 @@
 		<div>
 			<iframe width="100%" height="180" frameborder="no" scrolling="no" seamless
 				src="https://share.transistor.fm/e/bfb9dd18"></iframe>
+			<div class="flex justify-center mt-6">
+				<a href="/podcast-western-watts"
+					class="px-auto flex items-center gap-1 text-[#3C261F] bg-[#CCAE87] px-4 py-2 rounded-full no-underline uppercase hover:bg-[#CCAE87]">
+					<img src="https://tristate.coop/sites/default/files/images/podcast/arrow-left-solid-coffee.svg"
+						alt="Podcast" class="size-3 mt-0.5">
+					<span>More Episodes</span>
+				</a>
+			</div>
 		</div>
 	</section>
 
