--- a/podcast-feed.htm
+++ b/podcast-feed.htm
@@ -110,15 +110,29 @@
 
 		</div>
 	</section>
-
-
-
-
-
-
+	<section class="px-8 py-16">
+		<div class="space-y-4 p-4 border border-solid border-gray">
+			<p class="font-bold !text-xs">Western Watts Podcast Disclaimer</p>
+			<p class="!text-xs">
+				Western Watts is a podcast produced by Tri-State. Podcast content is for
+				entertainment and informational purposes only, and should not be construed as professional advice.
+				Tri-State
+				does not guarantee the accuracy of statements of podcast hosts or guests, and does not endorse any
+				guests or
+				products discussed on the podcast. Information presented in the podcast may be incomplete for a viewer’s
+				purposes, context-dependent, and not timely at podcast replay. Views expressed by podcast guests,
+				audiences,
+				and participants are their own and are not intended as expressions by or positions of Tri-State. Podcast
+				viewers/listeners should exercise discretion and independently verify important information. All content
+				is
+				protected by copyright. No reproduction is authorized without Tri-State’s written permission. Western
+				Watts
+				is a registered trademark of Tri-State (Tri-State Generation and Transmission Association, Inc.).
+			</p>
+		</div>
+	</section>
 
 
 </body>
-
 
 </html>
