Podcast: Add socials

--- a/podcast-feed.htm
+++ b/podcast-feed.htm
@@ -56,10 +56,10 @@
 				relevant to rural, agricultural and mountain communities across Colorado, Nebraska, New Mexico and
 				Wyoming.
 			</p>
-			<p class="text-balance">
-				Listen here or follow along on your preferred platform:
+			<p class="text-balance pt-4">
+				Listen on your preferred platform:
 			</p>
-			<div class="grid gap-4 justify-center pt-10 w-full max-w-xs sm:max-w-none sm:grid-flow-col mx-auto">
+			<div class="grid gap-4 justify-center w-full max-w-xs sm:max-w-none sm:grid-flow-col mx-auto">
 
 				<!-- auto-cols-fr -->
 				<a href="https://open.spotify.com/show/1NiQnORjcy5IIkFnGX6Po1" target="_blank"
@@ -81,7 +81,26 @@
 					<span>Apple</span>
 				</a>
 			</div>
-
+			<div class="pt-6 mx-auto text-center">
+				<div class="flex items-center gap-4 justify-center">
+					<span class="text-black font-bold">Follow Us:</span>
+					<a href="https://www.instagram.com/western.watts/" target="_blank"
+						class="flex items-center no-underline">
+						<img src="https://tristate.coop/sites/default/files/images/podcast/instagram-brands-coffee.svg"
+							alt="Instagram Logo" class="size-8">
+					</a>
+					<a href="https://www.youtube.com/playlist?list=PLuo-t-d_Nu0wBueACUqtL4L_fPTYKO6-y" target="_blank"
+						class="flex items-center no-underline">
+						<img src="https://tristate.coop/sites/default/files/images/podcast/youtube-brands-solid-coffee.svg"
+							alt="YouTube Logo" class="size-8">
+					</a>
+					<a href="https://www.facebook.com/western.watts" target="_blank"
+						class="flex items-center no-underline">
+						<img src="https://tristate.coop/sites/default/files/images/podcast/facebook-brands-coffee.svg"
+							alt="YouTube Logo" class="size-8">
+					</a>
+				</div>
+			</div>
 		</div>
 	</section>
 	<section class="px-8 py-16 text-center sm:grid sm:place-items-center">
